build: :building_construction: Legge til config for jlink
For å shippe prosjektet

#87