@@ -107,12 +107,28 @@
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
       </plugin>
+      
 
       <!-- Maven Surefire plugin -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-      </plugin>
+        <configuration>
+            <skipTests>${skipUiTests}</skipTests>
+            <systemPropertyVariables>
+                <headless>${headlessTests}</headless>
+            </systemPropertyVariables>
+            <forkCount>0</forkCount>
+            <reuseForks>true</reuseForks>
+            
+            <argLine>
+            @{jaCoCoArgLine} -Dtestfx.robot=awt
+            --add-opens bikerentalapp.ui/bikerentalapp.ui=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+            --add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+            --add-exports javafx.graphics/com.sun.glass.ui.delegate=ALL-UNNAMED
+            </argLine>
+        </configuration>
+    </plugin>
 
 
       <plugin>
@@ -135,10 +151,33 @@
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-maven-plugin</artifactId>
         <version>0.0.6</version>
-        <!-- Default configuration for running -->
-        <!-- Usage: mvn javafx:run -->
         <configuration>
-            <mainClass>bikerentalapp.ui.App</mainClass>
+            <mainClass>bikerentalapp.ui/bikerental.ui.App</mainClass>
+            <!-- rest of options are for jlink -->
+            <compress>2</compress>
+            <noHeaderFiles>true</noHeaderFiles>
+            <stripDebug>true</stripDebug>
+            <noManPages>true</noManPages>
+            <launcher>bikerentalappfx</launcher>
+            <jlinkImageName>bikerentalappfx</jlinkImageName>
+            <jlinkZipName>bikerentalappfx</jlinkZipName>
+        </configuration>
+      </plugin>
+
+      <!-- Run the jlink tool -->
+      <plugin>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-maven-plugin</artifactId>
+        <version>0.0.6</version>
+        <configuration>
+            <mainClass>bikerentalapp.ui/bikerentalapp.ui.App</mainClass>
+            <compress>2</compress>
+            <noHeaderFiles>true</noHeaderFiles>
+            <stripDebug>true</stripDebug>
+            <noManPages>true</noManPages>
+            <launcher>bikerentalfx</launcher>
+            <jlinkImageName>bikerentalfx</jlinkImageName>
+            <jlinkZipName>bikerentalfx</jlinkZipName>
         </configuration>
       </plugin>
 
@@ -158,23 +197,6 @@
       <plugin>
         <groupId>com.github.spotbugs</groupId>
         <artifactId>spotbugs-maven-plugin</artifactId>
-      </plugin>
-
-      <!-- Run the jlink tool -->
-      <plugin>
-        <groupId>org.openjfx</groupId>
-        <artifactId>javafx-maven-plugin</artifactId>
-        <version>0.0.8</version>
-        <configuration>
-            <compress>2</compress>
-            <noHeaderFiles>true</noHeaderFiles>
-            <stripDebug>true</stripDebug>
-            <noManPages>true</noManPages>
-            <launcher>bikeRentalApp</launcher>
-            <mainClass>bikerentalapp.ui/bikerentalapp.ui.App</mainClass>
-            <jlinkImageName>bikeRentalApp</jlinkImageName>
-            <jlinkZipName>bikeRentalApp</jlinkZipName>
-        </configuration>
       </plugin>
 
       <!-- Run the jpackage tool -->
